worked on alignment issue

--- a/public/assets/css/adminpromotional.css
+++ b/public/assets/css/adminpromotional.css
@@ -160,7 +160,7 @@
 .promotional-content-area {
     padding: 20px 0px;
     min-height: 400px;
-    width: 100%;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -478,6 +478,7 @@
         margin-top: 60px;
         position: static;  
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: white;
     }
 
     .promotional-composer-container {
@@ -705,7 +706,6 @@
 @media only screen and (max-width: 480px) {
     .promotional-email-composer {
         padding: 8px;
-        margin-top: 40px;
     }
     .promotional-composer-main-section{
         width: 95%;
